# Chess

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
src/: board.cpp  board.hpp  main.cpp  piece.cpp  piece.hpp  position.hpp  team.hpp  type.hpp
